--- a/Notebooks/ML LSTM model .ipynb
+++ b/Notebooks/ML LSTM model .ipynb
@@ -1018,6 +1018,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://towardsdatascience.com/quit-trying-to-predict-the-market-27d77149a709"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 193,
    "metadata": {},
